package _3_行为型模式._9_状态模式_State._1_StatePatternDemo;

public interface State {
    void doAction(Context context);
}
